--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                             type="email">
 
                         <input name="phone" placeholder="Entrez votre téléphone" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez votre téléphone'"
-                            class="common-input mb-20 " type="text">
+                            class="common-input mb-20 form-control" type="text">
 
                         <input name="subject" placeholder="Entrez votre sujet" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez votre sujet'"
                             class="common-input mb-20 form-control" required="" type="text">
