--- a/route_nord_2019.html
+++ b/route_nord_2019.html
@@ -109,7 +109,7 @@
                 <h3 class="mb-30">La Route du Nord</h3>
                 <div class="row">
                     <div class="col-md">
-                        <img src="img/routenord/DSC02595.jpg" alt="" class="img-fluid">
+                        <img src="img/norvege/DSC01806.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-md mt-sm">
                         <p>
@@ -121,9 +121,9 @@
                             qui regorgent de très jolis ports ou mouillages. Elles sont montagneuses et offrent des paysages
                             grandioses et des fjords encaissés.
                             <br>
-                            <br>Soit nous pouvons rejoindre plus rapidement les fjords de la côte norvégienne et profiter de
-                            leurs paysages bien connus. Nous arrivons à Tromsø, ville universitaire animée surtout en cette
-                            période de l’année où la lumière est présente pendant vingt quatre heures par jour.
+                            <br>Soit nous pouvons rejoindre plus rapidement les fjords de la côte norvégienne et profiter
+                            de leurs paysages bien connus. Nous arrivons à Tromsø, ville universitaire animée surtout en
+                            cette période de l’année où la lumière est présente pendant vingt quatre heures par jour.
                     </div>
                 </div>
             </div>
@@ -132,18 +132,18 @@
                     <div class="col-md">
                         <p class="text-right">
                             <br>
-                            <br>Cette croisière vous permettra de partager complètement la vie du bord: tenue des quarts, manoeuvres
-                            de voiles, tenue de la barre, navigation de nuit.
+                            <br>Cette croisière vous permettra de partager complètement la vie du bord: tenue des quarts,
+                            manoeuvres de voiles, tenue de la barre, navigation de nuit.
                             <br>
-                            <br>Vous pourrez enrichir vos connaissances en navigation, utilisation des instruments, lecture de
-                            cartes.
+                            <br>Vous pourrez enrichir vos connaissances en navigation, utilisation des instruments, lecture
+                            de cartes.
                             <br>
                             <br>Ne sont pas inclus: les transferts aériens, les boissons alcoolisées, les entrées des musées,
                             piscines, bains…
                         </p>
                     </div>
                     <div class="col-md">
-                        <img src="img/routenord/DSCN8547.jpg" alt="" class="img-fluid">
+                        <img src="img/norvege/DSC01857.jpg" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -168,7 +168,8 @@
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <p class="footer-text">Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés </p>
+                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés
+                        </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
