--- a/inscription.html
+++ b/inscription.html
@@ -53,7 +53,7 @@
                                 <a href="index.html#about">A propos</a>
                             </li>
                             <li>
-                                <a href="index.html#project">Programme 2019</a>
+                                <a href="programme2019.html">Programme 2019</a>
                             </li>
                             <li>
                                 <a href="index.html#film">Film Groenland</a>
@@ -121,8 +121,8 @@
                         <p>
 
                             <h4>INSCRIPTION</h4>
-                            <br> Votre réservation sera effective à réception de votre bulletin d’inscription accompagné d’un
-                            chèque d’acompte de 30% à l’ordre d’Algol Océans et en fonction de la disponibilité. A réception
+                            <br> Votre réservation sera effective à réception de votre bulletin d’inscription accompagné
+                            d’un chèque d’acompte de 30% à l’ordre d’Algol Océans et en fonction de la disponibilité. A réception
                             de et acompte, nous vous envoyons une facture qui confirme votre inscription. Le solde nous sera
                             versé 3 mois avant le départ. Possibilité de payer par carte bancaire en nous appelant au +33
                             297 450 345. Un retard de paiement au delà de ces dates sera considéré comme une annulation de
@@ -130,28 +130,28 @@
                             <br>
                             <br>
                             <h4> TARIF</h4>
-                            <br> Les prix annoncés correspondent à la location du bateau avec skipper, tarif par personne sur
-                            un programme choisi. Ils sont hors caisse de bord et hors frais de transport pour rejoindre le
-                            bateau.
+                            <br> Les prix annoncés correspondent à la location du bateau avec skipper, tarif par personne
+                            sur un programme choisi. Ils sont hors caisse de bord et hors frais de transport pour rejoindre
+                            le bateau.
                             <br>
                             <br>
                             <h4> CAISSE DE BORD</h4>
-                            <br> Elle comprend les repas pris à bord (hors boissons alcoolisées), les frais de ports, le gazole.
-                            Le montant de la caisse de bord est indiqué sur nos programmes. La caisse de bord est payable
-                            à l’embarquement au skipper, en espèces, en euros.
+                            <br> Elle comprend les repas pris à bord (hors boissons alcoolisées), les frais de ports, le
+                            gazole. Le montant de la caisse de bord est indiqué sur nos programmes. La caisse de bord est
+                            payable à l’embarquement au skipper, en espèces, en euros.
 
                             <br>
                             <br>
                             <h4> ASSURANCE</h4>
-                            <br> Nous sommes assurés en RC vis- à-vis des équipiers. Nous vous conseillons de souscrire une assurance
-                            individuelle pour assistance, rapatriement, accident. Vous pouvez souscrire, de plus, une assurance
-                            annulation.
+                            <br> Nous sommes assurés en RC vis- à-vis des équipiers. Nous vous conseillons de souscrire une
+                            assurance individuelle pour assistance, rapatriement, accident. Vous pouvez souscrire, de plus,
+                            une assurance annulation.
 
                             <br>
                             <br>
                             <h4> RESPONSABILITE</h4>
-                            <br> Chacun reste responsable de s’assurer qu’il satisfait bien aux conditions d’accès dans les pays
-                            visités et que ses conditions physiques sont compatibles avec le programme du voyage choisi.
+                            <br> Chacun reste responsable de s’assurer qu’il satisfait bien aux conditions d’accès dans les
+                            pays visités et que ses conditions physiques sont compatibles avec le programme du voyage choisi.
                             Le skipper est seul juge du parcours. Il peut être amené à le modifier en fonction des conditions
                             météo, des compétences de l’équipage ou pour des raisons techniques. Ni lui, ni Algol Océans
                             ne pourra être tenu pour responsable en cas de modification du parcours, du lieu d’arrivée ou
@@ -160,16 +160,16 @@
                             <br>
                             <br>
                             <h4> ANNULATION</h4>
-                            <br> En cas d’annulation de votre part: Plus de 3 mois avant la date de départ, votre acompte vous
-                            sera intégralement remboursé ou reporté sur un autre programme. Moins de 3 mois avant le départ,
-                            vos acomptes nous restent acquis. En cas d’annulation de notre part, vous aurez le choix entre
-                            un autre séjour ou le remboursement intégral des sommes avancées.
+                            <br> En cas d’annulation de votre part: Plus de 3 mois avant la date de départ, votre acompte
+                            vous sera intégralement remboursé ou reporté sur un autre programme. Moins de 3 mois avant le
+                            départ, vos acomptes nous restent acquis. En cas d’annulation de notre part, vous aurez le choix
+                            entre un autre séjour ou le remboursement intégral des sommes avancées.
 
                             <br>
                             <br>
                             <h4> LITIGE</h4>
-                            <br> La participation à un séjour implique votre adhésion à nos conditions générales énumérées ci-dessus.
-                            Tout litige éventuel relèvera de la compétence du Tribunal de Commerce de Vannes.
+                            <br> La participation à un séjour implique votre adhésion à nos conditions générales énumérées
+                            ci-dessus. Tout litige éventuel relèvera de la compétence du Tribunal de Commerce de Vannes.
                     </div>
                 </div>
             </div>
@@ -192,7 +192,8 @@
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <p class="footer-text">Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés </p>
+                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés
+                        </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
