--- a/spitzberg_1.html
+++ b/spitzberg_1.html
@@ -53,7 +53,7 @@
                                 <a href="index.html#about">A propos</a>
                             </li>
                             <li>
-                                <a href="index.html#project">Programme 2019</a>
+                                <a href="programme2019.html">Programme 2019</a>
                             </li>
                             <li>
                                 <a href="index.html#film">Film Groenland</a>
@@ -118,9 +118,9 @@
                             prise de contact avec le bateau.
 
                             <br>
-                            <br> Jour 2 à 5 : Traversée de Norvège au Spitzberg. La navigation prend un peu moins de quatre jours
-                            avec un arrêt possible à Björnøya ou île de l’ours. Arrivée au Spitzberg et mouillage dans le
-                            Hornsund, un des plus beaux fjords du Spitzberg. A cette époque de l’année, il n’est souvent
+                            <br> Jour 2 à 5 : Traversée de Norvège au Spitzberg. La navigation prend un peu moins de quatre
+                            jours avec un arrêt possible à Björnøya ou île de l’ours. Arrivée au Spitzberg et mouillage dans
+                            le Hornsund, un des plus beaux fjords du Spitzberg. A cette époque de l’année, il n’est souvent
                             pas possible de naviguer jusqu’ au fond du fjord à cause de la présence de la glace et nous mouillons
                             à Gashamma.
 
@@ -131,11 +131,11 @@
                             oiseaux; Ymerbukta et le glacier Esmarkbreen; Templetfjorden et l’étonnante falaise Templet.
 
                             <br>
-                            <br> Jour 12 : Arrivée à Longyearbyen, visite de la ville et soirée à terre. Longyearbyen est une
-                            ville animée bien que très septentrionale, musée polaire intéressant, université, piscine, boutiques,
-                            restaurants, les centres d’intérêts ne manquent pas. Les anciens chemins aériens des wagonnets
-                            des mines pour acheminer le charbon jusqu’au port modèlent le paysage et rappellent le passé
-                            minier de Longyearbyen.
+                            <br> Jour 12 : Arrivée à Longyearbyen, visite de la ville et soirée à terre. Longyearbyen est
+                            une ville animée bien que très septentrionale, musée polaire intéressant, université, piscine,
+                            boutiques, restaurants, les centres d’intérêts ne manquent pas. Les anciens chemins aériens des
+                            wagonnets des mines pour acheminer le charbon jusqu’au port modèlent le paysage et rappellent
+                            le passé minier de Longyearbyen.
                             <br>
                             <br> Jour 12+1 : débarquement, départ pour l’aéroport.
                     </div>
@@ -183,7 +183,8 @@
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <p class="footer-text">Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés </p>
+                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés
+                        </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
