--- a/spitzberg_2.html
+++ b/spitzberg_2.html
@@ -53,7 +53,7 @@
                                 <a href="index.html#about">A propos</a>
                             </li>
                             <li>
-                                <a href="index.html#project">Programme 2019</a>
+                                <a href="programme2019.html">Programme 2019</a>
                             </li>
                             <li>
                                 <a href="index.html#film">Film Groenland</a>
@@ -111,30 +111,30 @@
                             Jour 0 : arrivée à Longyearbyen, embarquement et nuit à bord.
 
                             <br>
-                            <br> Jour 1 : Le matin, visite de Longyearbyen, départ en début d’après-midi pour mouiller à Trygghamna.
-                            Le soir ou le lendemain matin : balade au pied d’ Alkhornet, grand rocher aux oiseaux, pour observer
-                            les rennes et les renards.
+                            <br> Jour 1 : Le matin, visite de Longyearbyen, départ en début d’après-midi pour mouiller à
+                            Trygghamna. Le soir ou le lendemain matin : balade au pied d’ Alkhornet, grand rocher aux oiseaux,
+                            pour observer les rennes et les renards.
 
                             <br>
-                            <br> Jour 2 à 11 : Nous naviguons vers le nord dans le Forlandsundet entre Prins Karl Forland et
-                            le Spitzberg, arrêt à Poolepynten pour observer la colonie de morses. Nous entrons ensuite dans
-                            la Baie du Roi pour admirer le grand glacier des Trois Couronnes, escale à Ny Alesund où des
-                            équipes de scientifiques de différents pays travaillent. Le Lilliehöökfjörden nous mène au glacier
-                            Lilliehöökbreen et sa façade de glace longue de huit kilomètres. Nous mouillons dans la Baie
-                            de la Madeleine, petit et superbe fjord dans lequel débouche le glacier Waggonwaybreen puis nous
-                            poursuivons vers le 80ème parallèle par Smeerenburgfjörden où nous avons des chances d’apercevoir
-                            des ours polaires. A cette latitude, nous nous approchons de la banquise. Nous mouillons tous
-                            les soirs à l’exception d’une nuit ou deux pour une étape de navigation d’une vingtaine d’heures.
-                            A cette époque de l’année, le jour est permanent, le terme de nuit n’a donc pas la même signification
-                            que sous nos latitudes. Le Spitzberg recèle beaucoup de sites et nous ne pouvons pas tout voir
-                            en douze jours. Rien que dans l’Isfjord, De nombreux mouillages s’offrent à nous dont l’étonnante
-                            falaise de Templet. le programme se fait en fonction des conditions météorologiques et de la
-                            glace ainsi que des envies des membres de l’équipage. Ce voyage fournit des occasions de randonnées
-                            intéressantes : Alkhornet, presqu’île de Gravneset dans la baie de la Madeleine, l'ancienne mine
-                            de marbre de Ny London, des sites historiques, la géologie, la glaciologie. Celles-ci sont aussi
-                            l’occasion d’observer la faune riche : renards, rennes, morses, oiseaux migrateurs et arctiques.
-                            Du bateau nous pouvons observer : phoques, belugas, baleines, ours polaires. La flore arctique
-                            est très présente : mousses, lichens, saules nains, linaigrette, saxifrage.
+                            <br> Jour 2 à 11 : Nous naviguons vers le nord dans le Forlandsundet entre Prins Karl Forland
+                            et le Spitzberg, arrêt à Poolepynten pour observer la colonie de morses. Nous entrons ensuite
+                            dans la Baie du Roi pour admirer le grand glacier des Trois Couronnes, escale à Ny Alesund où
+                            des équipes de scientifiques de différents pays travaillent. Le Lilliehöökfjörden nous mène au
+                            glacier Lilliehöökbreen et sa façade de glace longue de huit kilomètres. Nous mouillons dans
+                            la Baie de la Madeleine, petit et superbe fjord dans lequel débouche le glacier Waggonwaybreen
+                            puis nous poursuivons vers le 80ème parallèle par Smeerenburgfjörden où nous avons des chances
+                            d’apercevoir des ours polaires. A cette latitude, nous nous approchons de la banquise. Nous mouillons
+                            tous les soirs à l’exception d’une nuit ou deux pour une étape de navigation d’une vingtaine
+                            d’heures. A cette époque de l’année, le jour est permanent, le terme de nuit n’a donc pas la
+                            même signification que sous nos latitudes. Le Spitzberg recèle beaucoup de sites et nous ne pouvons
+                            pas tout voir en douze jours. Rien que dans l’Isfjord, De nombreux mouillages s’offrent à nous
+                            dont l’étonnante falaise de Templet. le programme se fait en fonction des conditions météorologiques
+                            et de la glace ainsi que des envies des membres de l’équipage. Ce voyage fournit des occasions
+                            de randonnées intéressantes : Alkhornet, presqu’île de Gravneset dans la baie de la Madeleine,
+                            l'ancienne mine de marbre de Ny London, des sites historiques, la géologie, la glaciologie. Celles-ci
+                            sont aussi l’occasion d’observer la faune riche : renards, rennes, morses, oiseaux migrateurs
+                            et arctiques. Du bateau nous pouvons observer : phoques, belugas, baleines, ours polaires. La
+                            flore arctique est très présente : mousses, lichens, saules nains, linaigrette, saxifrage.
                             <br>
                             <br> Jour 12 : Nous retournons dans l’Isfjörd à Longyearbyen, terme de notre voyage.
 
@@ -161,8 +161,8 @@
                                 nous sommes à terre.
 
                                 <br>
-                                <br> Ne sont pas inclus: les transferts aériens, les boissons alcoolisées, les entrées des musées,
-                                piscines, bains…
+                                <br> Ne sont pas inclus: les transferts aériens, les boissons alcoolisées, les entrées des
+                                musées, piscines, bains…
                         </div>
                     </div>
                 </div>
@@ -188,7 +188,8 @@
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <p class="footer-text">Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés </p>
+                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés
+                        </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
