--- a/spitzberg_3.html
+++ b/spitzberg_3.html
@@ -53,7 +53,7 @@
                                 <a href="index.html#about">A propos</a>
                             </li>
                             <li>
-                                <a href="index.html#project">Programme 2019</a>
+                                <a href="programme2019.html">Programme 2019</a>
                             </li>
                             <li>
                                 <a href="index.html#film">Film Groenland</a>
@@ -117,29 +117,29 @@
                             <br> Jour 0 : Arrivée à Longyearbyen, embarquement et nuit à bord.
 
                             <br>
-                            <br> Jour 1 : Le matin, visite de Longyearbyen, départ en début d’après-midi pour mouiller à Trygghamna.
-                            Le soir ou le lendemain matin : balade au pied d’ Alkhornet, grand rocher aux oiseaux, pour rencontrer
-                            les rennes et les renards.
+                            <br> Jour 1 : Le matin, visite de Longyearbyen, départ en début d’après-midi pour mouiller à
+                            Trygghamna. Le soir ou le lendemain matin : balade au pied d’ Alkhornet, grand rocher aux oiseaux,
+                            pour rencontrer les rennes et les renards.
 
                             <br>
-                            <br> Jour 2 à 13 : Nous naviguons vers le nord dans le Forlandsundet entre Prins Karl Forland et
-                            le Spitzberg, arrêt à Poolepynten pour observer la colonie de morses. Nous entrons ensuite dans
-                            la Baie du Roi pour admirer le grand glacier des Trois Couronnes, escale à Ny Alesund, où des
-                            équipes de scientifiques de différents pays travaillent. Le Lilliehöökfjörden nous mène au glacier
-                            Lilliehöökbreen et sa façade de glace longue de huit kilomètres. Nous mouillons dans la Baie
-                            de la Madeleine, petit et superbe fjord dans lequel débouche le glacier Waggonwaybreen puis nous
-                            poursuivons vers la côte nord par Smeerenburgfjörden , vers les fjords Raudfjørden, Woodfjørden,
-                            l’île Moffen et sa colonie de morses. Les morses sont présents à Poolepynten jusqu’au 15 juillet,
-                            puis ils migrent vers Moffen. Nous embouquons le Hinlopenstreetet, entre le Spitzberg et le Nordaustlandet,
-                            pour longer la côte Est vers le sud et les îles Barents et Edgeøya. Plusieurs mouillages sont
-                            possibles sur cette côte dont la baie d’Inglefield où Vagabond avait hiverné pendant cinq ans
-                            participant au programme Damoclès. L’observation d’ours polaires est quasi certaine dans cette
-                            région.
+                            <br> Jour 2 à 13 : Nous naviguons vers le nord dans le Forlandsundet entre Prins Karl Forland
+                            et le Spitzberg, arrêt à Poolepynten pour observer la colonie de morses. Nous entrons ensuite
+                            dans la Baie du Roi pour admirer le grand glacier des Trois Couronnes, escale à Ny Alesund, où
+                            des équipes de scientifiques de différents pays travaillent. Le Lilliehöökfjörden nous mène au
+                            glacier Lilliehöökbreen et sa façade de glace longue de huit kilomètres. Nous mouillons dans
+                            la Baie de la Madeleine, petit et superbe fjord dans lequel débouche le glacier Waggonwaybreen
+                            puis nous poursuivons vers la côte nord par Smeerenburgfjörden , vers les fjords Raudfjørden,
+                            Woodfjørden, l’île Moffen et sa colonie de morses. Les morses sont présents à Poolepynten jusqu’au
+                            15 juillet, puis ils migrent vers Moffen. Nous embouquons le Hinlopenstreetet, entre le Spitzberg
+                            et le Nordaustlandet, pour longer la côte Est vers le sud et les îles Barents et Edgeøya. Plusieurs
+                            mouillages sont possibles sur cette côte dont la baie d’Inglefield où Vagabond avait hiverné
+                            pendant cinq ans participant au programme Damoclès. L’observation d’ours polaires est quasi certaine
+                            dans cette région.
 
                             <br>
-                            <br> Jour 14 à 18 : Traversée du sud du Spitzberg vers la Norvège. La navigation prend un peu moins
-                            de quatre jours avec un arrêt possible à Björnøya ou île de l’ours. Arrivée et mouillage dans
-                            les fjords au pied des montagnes du nord de Tromsø (Alpes de Lyngen).
+                            <br> Jour 14 à 18 : Traversée du sud du Spitzberg vers la Norvège. La navigation prend un peu
+                            moins de quatre jours avec un arrêt possible à Björnøya ou île de l’ours. Arrivée et mouillage
+                            dans les fjords au pied des montagnes du nord de Tromsø (Alpes de Lyngen).
 
                             <br>
                             <br> Jour 19 : Navigation dans les fjords et arrivée à Tromsø, découverte de la cité universitaire
@@ -193,7 +193,8 @@
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <p class="footer-text">Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés </p>
+                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés
+                        </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
