--- a/programme2019.html
+++ b/programme2019.html
@@ -25,13 +25,14 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
     <!-- start banner Area -->
-    <section class="generic-banner relative">
+    <section class="banner-area">
         <!-- Start Header Area -->
         <header class="default-header">
             <nav class="navbar navbar-expand-lg  navbar-light">
@@ -53,7 +54,7 @@
                                 <a href="index.html#about">A propos</a>
                             </li>
                             <li>
-                                <a href="programme2019.html">Programme 2019</a>
+                                <a href="index.html#project">Programme 2019</a>
                             </li>
                             <li>
                                 <a href="index.html#film">Film Groenland</a>
@@ -87,72 +88,135 @@
             </nav>
         </header>
         <!-- End Header Area -->
-        <div class="container">
-            <div class="row height align-items-center justify-content-center">
-                <div class="col-lg">
-                    <div class="generic-banner-content">
-                        <h2 class="text-white">La Route du Nord</h2>
-                        <p class="text-white">Ecosse - Norvege
-                            <br>
-                            <br> Du dimanche 12 mai au vendredi 24 mai (13 jours) </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </section>
 
+    <section class="default-banner active-blog-slider">
+        <div class="item-slider relative" style="background: url(img/accueil/glacier.jpg);background-size: cover;">
+            <div class="overlay" style="background: rgba(0,0,0,.3)"></div>
+            <div class="container">
+                <div class="row fullscreen justify-content-center align-items-center">
+                    <div class="col-md-10 col-12">
+                        <div class="banner-content text-center">
+                            <h4 class="text-white mb-20 text-uppercase">Algol Océans</h4>
+                            <h1 class="text-uppercase text-white">Programme 2019</h1>
+                        </div>
+                    </div>
 
-    <div class="whole-wrap">
-        <div class="container">
-            <div class="section-top-border">
-                <h3 class="mb-30">La Route du Nord</h3>
-                <div class="row">
-                    <div class="col-md">
-                        <img src="img/norvege/DSC01806.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="col-md mt-sm">
-                        <p>
-                            <br>
-                            <br> Nous quittons Stornoway et faisons route vers la Norvège. Nous avons la possibilité de faire
-                            escale aux Shetland, archipel de 23 000 habitants situés sur le 60ème parallèle. .
-                            <br>
-                            <br>Suivant les conditions météorologiques, nous pouvons soit faire route directe vers les Lofoten
-                            qui regorgent de très jolis ports ou mouillages. Elles sont montagneuses et offrent des paysages
-                            grandioses et des fjords encaissés.
-                            <br>
-                            <br>Soit nous pouvons rejoindre plus rapidement les fjords de la côte norvégienne et profiter
-                            de leurs paysages bien connus. Nous arrivons à Tromsø, ville universitaire animée surtout en
-                            cette période de l’année où la lumière est présente pendant vingt quatre heures par jour.
-                    </div>
                 </div>
             </div>
-            <div class="section-top-border text-right">
-                <div class="row">
-                    <div class="col-md">
-                        <p class="text-right">
-                            <br>
-                            <br>Cette croisière vous permettra de partager complètement la vie du bord: tenue des quarts,
-                            manoeuvres de voiles, tenue de la barre, navigation de nuit.
-                            <br>
-                            <br>Vous pourrez enrichir vos connaissances en navigation, utilisation des instruments, lecture
-                            de cartes.
-                            <br>
-                            <br>Ne sont pas inclus: les transferts aériens, les boissons alcoolisées, les entrées des musées,
-                            piscines, bains…
-                        </p>
-                    </div>
-                    <div class="col-md">
-                        <img src="img/norvege/DSC01857.jpg" alt="" class="img-fluid">
-                    </div>
-                </div>
-            </div>
-
-
-
         </div>
-    </div>
+        <div class="item-slider relative" style="background: url(img/accueil/algol.jpg);background-size: cover;">
+            <div class="overlay" style="background: rgba(0,0,0,.3)"></div>
+            <div class="container">
+                <div class="row fullscreen justify-content-center align-items-center">
+                    <div class="col-md-10 col-12">
+                        <div class="banner-content text-center">
+                            <h4 class="text-white mb-20 text-uppercase">Algol Océans</h4>
+                            <h1 class="text-uppercase text-white">Programme 2019</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item-slider relative" style="background: url(img/accueil/algol3.jpg);background-size: cover;">
+            <div class="overlay" style="background: rgba(0,0,0,.3)"></div>
+            <div class="container">
+                <div class="row fullscreen justify-content-center align-items-center">
+                    <div class="col-md-10 col-12">
+                        <div class="banner-content text-center">
+                            <h4 class="text-white mb-20 text-uppercase">Algol Océans</h4>
+                            <h1 class="text-uppercase text-white">Programme 2019</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section class="section-gap info-area">
+        <div class="container">
+
+            <div class="single-info row mt-40">
+                <div class="col-lg-6 col-md-12 no-padding info-rigth">
+                    <div class="info-content">
+                        <h1 class="pb-30"> Descriptif </h1>
+                        <p>
+                            <h3 class="text-uppercase">Arzal - Stornoway</h3>
+                            <br>
+                            <p>Du samedi 27 avril au vendredi 10 mai (14 jours) : La route du whisky</p>
+                            <p>Embarquement : 26/04 à 18h00, débarquement : 11/05 le matin</p>
+                            <p>Prix par personne : 1 700 € + 420 € caisse de bord.</p>
+                            <br>
+                            <a href="route_whisky_2019.html" class="text-uppercase genric-btn primary-border circle">Programme
+                                détaillé
+                            </a>
+                        </p>
+                        <br>
+                        <p>
+                            <h3 class="text-uppercase">Stornoway - Tromso</h3>
+                            <br>
+                            <p>Du dimanche 12 mai au vendredi 24 mai (13 jours) : La route du nord</p>
+                            <p>Embarquement : 11/05 à 18h00, débarquement : 25/05 le matin.</p>
+                            <p>Prix par personne : 1 600 € + 390 € caisse de bord.</p>
+                            <br>
+                            <a href="route_nord_2019.html" class="text-uppercase genric-btn primary-border circle">Programme
+                                détaillé
+                            </a>
+                        </p>
+                        <br>
+                        <p>
+                            <h3 class="text-uppercase">Spitzberg</h3>
+                            <br>
+                            <p>Du Lundi 27 mai au 28 août : 6 croisières</p>
+                            <p>Tromsø à Longyearbyen : 1 croisière</p>
+                            <p>Longyearbyen - Longyearbyen : 4 croisières</p>
+                            <p>Longyearbyen à Tromsø : 1 croisière</p>
+                            <br>
+                            <a href="spitzberg.html" class="text-uppercase genric-btn primary-border circle">Programme détaillé
+                            </a>
+                        </p>
+                        <br>
+                        <p>
+                            <h3 class="text-uppercase">Tromso - Arzal </h3>
+                            <br>
+                            <p>Du mercredi 7 août au mercredi 28 août (22 jours) : retour Norvège par le nord et l’est du
+                                Spitzberg.
+                            </p>
+                            <p>Embarquement : 30/08 à partir de 18h00, débarquement : 21/09 le matin</p>
+                            <p>Prix par personne : 1 700 € + 630 € caisse de bord.</p>
+                            <br>
+                            <a href="retour_norvege.html" class="text-uppercase genric-btn primary-border circle">Programme
+                                détaillé
+                            </a>
+                        </p>
+
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 mt-120 text-center  info-left">
+                    <div class="info-thumb">
+                        <img src="img/routewhisky/DSC01673.jpg" class="img-fluid" alt="">
+                    </div>
+                    <br>
+                    <br>
+                    <div class="col-sm">
+                        <div class="info-thumb">
+                            <img src="img/norvege/DSC01892.jpg" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="info-thumb">
+                            <img src="img/spitzberg/DSC01994.jpg" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="info-thumb">
+                            <img src="img/norvege/DSC01836.jpg" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- start footer Area -->
     <footer class="footer-area section-gap">
         <div class="container">
