--- a/retour_norvege.html
+++ b/retour_norvege.html
@@ -53,7 +53,7 @@
                                 <a href="index.html#about">A propos</a>
                             </li>
                             <li>
-                                <a href="index.html#project">Programme 2019</a>
+                                <a href="programme2019.html">Programme 2019</a>
                             </li>
                             <li>
                                 <a href="index.html#film">Film Groenland</a>
