--- a/spitzberg.html
+++ b/spitzberg.html
@@ -53,7 +53,7 @@
                                 <a href="index.html#about">A propos</a>
                             </li>
                             <li>
-                                <a href="index.html#project">Programme 2019</a>
+                                <a href="programme2019.html">Programme 2019</a>
                             </li>
                             <li>
                                 <a href="index.html#film">Film Groenland</a>
@@ -112,7 +112,9 @@
                                     Embarquement : 26/05 à partir de 18h00, débarquement : 09/06 le matin Prix par personne
                                     : 2 600 € + 455 € caisse de bord.
                                     <br>
-                                    <a href="spitzberg_1.html" class="text-uppercase genric-btn primary-border">Programme détaillé</a>
+                                    <a href="spitzberg_1.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé
+                                    </a>
                                 </li>
                                 <br>
                                 <li>
@@ -120,35 +122,45 @@
                                     : 11/06 à partir de 18h00, débarquement : 24/06 le matin Prix par personne : 3 200 €
                                     + 420 € caisse de bord.
                                     <br>
-                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme détaillé</a>
+                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé
+                                    </a>
                                 </li>
                                 <br>
                                 <li> Du mercredi 26 juin au dimanche 7 juillet (13 jours) : Côte nord-ouest Spitzberg Longyearbyen
                                     - Longyearbyen. Embarquement : 25/06 à partir de 18h00, débarquement : 08/07 le matin
                                     Prix par personne : 3 020 € + 420 € caisse de bord.
                                     <br>
-                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme détaillé</a>
+                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé
+                                    </a>
                                 </li>
                                 <br>
-                                <li> Du mercredi 10 juillet au dimanche 21 juillet (13 jours) : Côte nord-ouest Spitzberg Longyearbyen
-                                    - Longyearbyen. Embarquement : 09/07 à partir de 18h00, débarquement : 22/07 le matin
-                                    Prix par personne : 3 200 € + 420 € caisse de bord.
+                                <li> Du mercredi 10 juillet au dimanche 21 juillet (13 jours) : Côte nord-ouest Spitzberg
+                                    Longyearbyen - Longyearbyen. Embarquement : 09/07 à partir de 18h00, débarquement : 22/07
+                                    le matin Prix par personne : 3 200 € + 420 € caisse de bord.
                                     <br>
-                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme détaillé</a>
+                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé
+                                    </a>
                                 </li>
                                 <br>
                                 <li> Du mercredi 24 juillet au dimanche 4 août (13 jours) : Côte nord-ouest Spitzberg Longyearbyen
                                     - Longyearbyen. Embarquement : 23/07 à partir de 18h00, débarquement : 05/08 le matin
                                     Prix par personne : 3 200 € + 420 € caisse de bord.
                                     <br>
-                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme détaillé</a>
+                                    <a href="spitzberg_2.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé
+                                    </a>
                                 </li>
                                 <br>
-                                <li> Du mercredi 7 août au mercredi 28 août (22 jours) : retour Norvège par le nord et l’est du
-                                    Spitzberg. De Longyearbyen à Tromsø. Embarquement : 06/08 à partir de 18h00, débarquement
+                                <li> Du mercredi 7 août au mercredi 28 août (22 jours) : retour Norvège par le nord et l’est
+                                    du Spitzberg. De Longyearbyen à Tromsø. Embarquement : 06/08 à partir de 18h00, débarquement
                                     : 29/08 le matin Prix par personne : 4 200 € + 660 € caisse de bord.
                                     <br>
-                                    <a href="spitzberg_3.html" class="text-uppercase genric-btn primary-border">Programme détaillé</a>
+                                    <a href="spitzberg_3.html" class="text-uppercase genric-btn primary-border">Programme
+                                        détaillé
+                                    </a>
                                 </li>
                             </ul>
                         </p>
@@ -169,8 +181,8 @@
                 <br>
                 <br> REMARQUE: En raison des conditions météorologiques en régions polaires, le programme peut être modifié.
                 <br>
-                <br>Il peut aussi être modifié en fonction de la présence de la glace. La prestation inclut l’hébergement sur
-                le voilier, la nourriture prise à bord. Ne sont pas inclus: les transferts aériens et autres pour rejoindre
+                <br>Il peut aussi être modifié en fonction de la présence de la glace. La prestation inclut l’hébergement
+                sur le voilier, la nourriture prise à bord. Ne sont pas inclus: les transferts aériens et autres pour rejoindre
                 le bateau, les boissons alcoolisées, les entrées des musées, les douches à terre.
                 <br>
                 <br>Voir nos conditions générales pour plus de détails. A votre demande, nous vous enverrons un dossier très
@@ -205,7 +217,8 @@
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <p class="footer-text">Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés </p>
+                            <script>document.write(new Date().getFullYear());</script> Tous droits reservés
+                        </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
